# novelist

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PUSH_TO_NEW_REPO.md  README.md  docker-compose.yml  docker-entrypoint.sh  flake.nix  justfile  novelist  package-lock.json  requirements.txt  setup.py
.agents/skills/: design-compliance-checker.skill  novelist-tester.skill  project-roadmap.skill
.agents/skills/design-compliance-checker/: SKILL.md
.agents/skills/novelist-tester/: SKILL.md
.agents/skills/project-roadmap/: SKILL.md  progress.json
.github/workflows/: ci.yml  release.yml
deploy/local/: README.md  docker-compose.yml  load-images.sh  start.sh  status.sh  stop.sh
deploy/local/data/: .gitignore
deploy/local/web/: index.html  nginx.conf
docs/: action.md  keikaku.md  public-publish.md  release-local.md
go/: go.mod  go.sum
go/cmd/agent/: main.go
go/cmd/api/: main.go
go/pkg/agents/: agent.go  checker.go  committer.go  config.go  config_test.go  director.go  editor.go  ollama_provider.go  openai_provider.go  provider.go  swarm.go  (+1 more)
k8s/: deployment.yaml  namespace.yaml
rust/: Cargo.toml
rust/benches/: rag_benchmark.rs  tokenizer_benchmark.rs
rust/src/: lib.rs  models.rs
rust/src/ffi/: mod.rs
rust/src/i18n/: mod.rs
rust/src/rag/: embedding.rs  mod.rs
rust/src/tokenizer/: japanese.rs  mod.rs
scripts/: package_local_distribution.sh  smoke_local_distribution.sh  stage_public_push.sh
src/: __init__.py
src/agents/: checker.py  committer.py  director.py  editor.py  writer.py
src/cli/: main.py
src/core/: __init__.py  config_manager.py  logger.py  models.py  project.py
src/memory/: episodic.py  facts.py  foreshadowing.py
src/pal/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  router.py
src/parsers/: bible_parser.py  character_loader.py
src/pipeline/: swarm.py  two_stage.py
src/rag/: retriever.py
src/session/: manager.py
templates/: bible.md.template  character.json.template  config.yaml.template  episodic.md.template  facts.json.template  foreshadow.json.template  scenespec.template.json
tests/: test_integration.py  test_phase1.py  test_phase2.py
web/: index.html
(+20 files in other folders)
